Fix overflow-x for code

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 code {
-    overflow-x: hidden;
+    overflow-x: auto;
     white-space: nowrap;
 }
 
